# codec

./: Cargo.toml
.github/workflows/: main.yml
src/: bytes.rs  decode.rs  endian.rs  len.rs  lib.rs  net.rs  prim.rs  slice.rs  tlv.rs  zerocopy.rs
src/buffer/: lookahead.rs  mod.rs  peek.rs
src/decode/: buffer.rs  decoder.rs  mod.rs  peek.rs  slice.rs
src/encode/: cursor.rs  len.rs  mod.rs  test_macros.rs
