[package]
name = "codec"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[features]
default = ["std", "bytes", "zerocopy"]
std = ["alloc"]
alloc = []

[dependencies]
bytes = { version = "0.5", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false }
zerocopy = { version = "0.3", default-features = false, optional = true }
